--- a/assets/estilos.css
+++ b/assets/estilos.css
@@ -24,6 +24,8 @@ body, html {
     height: 100px; /* Adjust height as needed */
     background: #778899; /* Dim gray */
     clip-path: polygon(0% 100%, 25% 70%, 50% 100%, 75% 70%, 100% 100%);
+    border-bottom-left-radius: 100px;
+    border-bottom-right-radius: 100px;
     z-index: -1;
   }
   .monte2 {
@@ -34,5 +36,7 @@ body, html {
     height: 150px; /* Adjust height as needed */
     background: #A9A9A9; /* Dark gray */
     clip-path: polygon(0% 100%, 20% 60%, 40% 100%, 60% 60%, 80% 100%, 100% 100%);
+    border-bottom-left-radius: 150px;
+    border-bottom-right-radius: 150px;
     z-index: -1;
   }
