--- a/assets/estilos.css
+++ b/assets/estilos.css
@@ -1,3 +1,10 @@
+body {
+  background-image: url('/assets/cerro.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 300px;
+}
+
 body, html {
     background-color: #f5f5f5;
     margin: 0;
@@ -13,5 +20,5 @@ body, html {
     height: 0;
     border-left: 50px solid transparent;
     border-right: 50px solid transparent;
-    border-bottom: 86.6px solid #8B0000; /* (lado * sqrt(3)) / 2 */
+    border-bottom: 86.6px solid #ffffff; /* (lado * sqrt(3)) / 2 */
   }
